# docchat

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agents/: relevance_checker.py  research_agent.py  verification_agent.py  workflow.py
config/: models.py  settings.py
document_processor/: file_handler.py
retriever/: builder.py
test/: relevance_agent_functional_test.py  test_document_processor.py  test_embedding_factory.py  test_model_factory.py  test_relevance_checker.py  test_workflow.py
utils/: logging.py
